--- a/templates/analyze2.html
+++ b/templates/analyze2.html
@@ -5,7 +5,7 @@
     <title>analyzing your text...</title>
 </head>
 <body>
-<h1>Your Analyzed text- {{ purpose }}</h1>
+<h1>Your Analyzed text- {{ purpose }} - total length {{leng}}</h1>
 <p>
     {{analyzed_text}}
 </p>
